OpenJMLTest/test/gitbug497/expected
test/gitbug497/IVec.java:15: error: ')' expected
      @                            j <= i ==> src[j] != 0); @*/
                                                          ^
test/gitbug497/IVec.java:30: error: illegal start of type
      @       && (\exists int i; 0 <= i && i < right.length; 
              ^
test/gitbug497/IVec.java:31: error: <identifier> expected
      @                           right[i] == 0); @*/
                                               ^
test/gitbug497/IVec.java:30: error: cannot find symbol
      @       && (\exists int i; 0 <= i && i < right.length; 
                                               ^
  symbol:   variable right
  location: class IVec
test/gitbug497/IVec.java:31: error: cannot find symbol
      @                           right[i] == 0); @*/
                                  ^
  symbol:   variable right
  location: class IVec
test/gitbug497/IVec.java:30: error: unexpected type
      @       && (\exists int i; 0 <= i && i < right.length; 
                  ^
  required: class
  found:    value
6 errors
